Grundlagen für Webseite erstellt

--- a/oshealthrec-website/doktor/hochladen.html
+++ b/oshealthrec-website/doktor/hochladen.html
@@ -22,14 +22,14 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
+                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
             </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+            <li class="nav-item active ml-5">
+                <a class="nav-link" href="patienten.html">Patienten</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -40,10 +40,22 @@
 
 <div class="container">
     <div class="row">
-
+        <div class="col-sm-12">
+            <h3>Dokument hochladen</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <form class="mt-3">
+                <input type="file" class="form-control-file mb-2" id="datei">
+                <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
+                <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
+                <button type="button" class="btn btn-primary">Hochladen</button>
+            </form>
+        </div>
+    </div>
     </div>
 </div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
