--- a/oshealthrec-website/patient/profil.html
+++ b/oshealthrec-website/patient/profil.html
@@ -40,7 +40,27 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <dl class="row">
+                <dt class="col-sm-2">Vorname</dt>
+                <dd class="col-sm-10">Ole</dd>
 
+                <dt class="col-sm-2">Nachname</dt>
+                <dd class="col-sm-10">Kohl</dd>
+
+                <dt class="col-sm-2">Geschlecht</dt>
+                <dd class="col-sm-10">Männlich</dd>
+
+                <dt class="col-sm-2">Geburtsdatum</dt>
+                <dd class="col-sm-10">16.08.1997</dd>
+
+                <dt class="col-sm-2">Blutgruppe</dt>
+                <dd class="col-sm-10">A Rh pos</dd>
+
+                <dt class="col-sm-2">Notfallkontakt</dt>
+                <dd class="col-sm-10">Sebastian Kamp</dd>
+            </dl>
+        </div>
     </div>
 </div>
 
