--- a/oshealthrec-website/doktor/patient.html
+++ b/oshealthrec-website/doktor/patient.html
@@ -22,14 +22,14 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
+                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
             </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+            <li class="nav-item active ml-5">
+                <a class="nav-link" href="patienten.html">Patienten</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -40,10 +40,59 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <dl class="row mt-3">
+                <dt class="col-sm-2">Vorname</dt>
+                <dd class="col-sm-10">Ole</dd>
 
+                <dt class="col-sm-2">Nachname</dt>
+                <dd class="col-sm-10">Kohl</dd>
+
+                <dt class="col-sm-2">Geschlecht</dt>
+                <dd class="col-sm-10">Männlich</dd>
+
+                <dt class="col-sm-2">Geburtsdatum</dt>
+                <dd class="col-sm-10">16.08.1997</dd>
+
+                <dt class="col-sm-2">Blutgruppe</dt>
+                <dd class="col-sm-10">A Rh pos</dd>
+
+                <dt class="col-sm-2">Notfallkontakt</dt>
+                <dd class="col-sm-10">Sebastian Kamp</dd>
+            </dl>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-9">
+            <table class="table table-hover mt-3">
+                <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Titel</th>
+                    <th scope="col">Beschreibung</th>
+                    <th scope="col">Datum</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Blutanalyse</td>
+                    <td>voll die krasse Blutanalyse</td>
+                    <td>25.07.2019</td>
+                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-3">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary mt-3 btn-block freigaben-button">Herunterladen</button> <br />
+                <button type="button" class="btn btn-primary btn-block freigaben-button">Hochladen</button>
+            </form>
+        </div>
     </div>
 </div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
