--- a/oshealthrec-website/doktor/profil.html
+++ b/oshealthrec-website/doktor/profil.html
@@ -26,10 +26,10 @@
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
+                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+                <a class="nav-link" href="patienten.html">Patienten</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -40,10 +40,30 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <dl class="row">
+                <dt class="col-sm-2">Vorname</dt>
+                <dd class="col-sm-10">Li-Ming</dd>
 
+                <dt class="col-sm-2">Nachname</dt>
+                <dd class="col-sm-10">Yu</dd>
+
+                <dt class="col-sm-2">Geschlecht</dt>
+                <dd class="col-sm-10">Weiblich</dd>
+
+                <dt class="col-sm-2">Geburtsdatum</dt>
+                <dd class="col-sm-10">01.01.1982</dd>
+
+                <dt class="col-sm-2">Anschrift</dt>
+                <dd class="col-sm-10">
+                    Musterstraße 42 <br />
+                    49074 Osnabrück <br />
+                    Deutschland <br />
+                </dd>
+            </dl>
+        </div>
     </div>
 </div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
