--- a/oshealthrec-website/mitarbeiter/profil.html
+++ b/oshealthrec-website/mitarbeiter/profil.html
@@ -26,10 +26,7 @@
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
-            </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -40,7 +37,21 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <dl class="row">
+                <dt class="col-sm-2">Vorname</dt>
+                <dd class="col-sm-10">Sebastian</dd>
 
+                <dt class="col-sm-2">Nachname</dt>
+                <dd class="col-sm-10">Kamp</dd>
+
+                <dt class="col-sm-2">Geschlecht</dt>
+                <dd class="col-sm-10">Männlich</dd>
+
+                <dt class="col-sm-2">Geburtsdatum</dt>
+                <dd class="col-sm-10">16.08.1997</dd>
+            </dl>
+        </div>
     </div>
 </div>
 
