--- a/oshealthrec-website/patient/arzt-suche.html
+++ b/oshealthrec-website/patient/arzt-suche.html
@@ -22,13 +22,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="dokumente.html">Dokumente</a>
             </li>
-            <li class="nav-item ml-5">
+            <li class="nav-item ml-5 active">
                 <a class="nav-link" href="freigaben.html">Freigaben</a>
             </li>
         </ul>
@@ -40,7 +40,54 @@
 
 <div class="container">
     <div class="row">
-
+        <div class="col-sm-12">
+            <h3>Arztsuche</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <form>
+                <input type="text" class="form-control mb-2" id="vorname" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="nachname" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="straße" placeholder="Straße">
+                <input type="text" class="form-control mb-2" id="Ort" placeholder="Ort">
+                <button type="button" class="btn btn-primary">Suchen</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-10">
+            <table class="table table-hover mt-5">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Anschrift</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Dr. Li-Ming Yu</td>
+                    <td>Musterstraße 42 <br />
+                        49074 Osnabrück <br />
+                        Deutschland <br />
+                    </td>
+                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
+                </tr>
+                <tr>
+                    <td>Dr. Li-Ming Yu</td>
+                    <td>Musterstraße 42 <br />
+                        49074 Osnabrück <br />
+                        Deutschland <br />
+                    </td>
+                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-primary btn-block mt-5">Freigeben</button>
+        </div>
     </div>
 </div>
 
