--- a/oshealthrec-website/mitarbeiter/dokumentenverwaltung.html
+++ b/oshealthrec-website/mitarbeiter/dokumentenverwaltung.html
@@ -25,11 +25,8 @@
             <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
-            </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="patienten.html">Patienten</a>
+                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -41,20 +38,33 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Dokument hochladen</h3>
+            <h3>Arztliste</h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-5">
-            <form class="mt-3">
-                <input type="file" class="form-control-file mb-2" id="datei">
-                <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
-                <button type="button" class="btn btn-primary">Hochladen</button>
-            </form>
+        <div class="col-sm-9">
+            <table class="table table-hover mt-3">
+                <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Anschrift</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Dr. Li-Ming Yu</td>
+                    <td>
+                        Musterstraße 42 <br />
+                        49074 Osnabrück <br />
+                        Deutschland <br />
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
