--- a/oshealthrec-website/mitarbeiter/hochladen.html
+++ b/oshealthrec-website/mitarbeiter/hochladen.html
@@ -22,14 +22,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item ml-5">
+            <li class="nav-item active ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
-            </li>
-            <li class="nav-item active ml-5">
-                <a class="nav-link" href="patienten.html">Patienten</a>
+                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -55,6 +52,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
