--- a/oshealthrec-website/mitarbeiter/patienten-suche.html
+++ b/oshealthrec-website/mitarbeiter/patienten-suche.html
@@ -25,11 +25,8 @@
             <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
-            </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="patienten.html">Patienten</a>
+                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -41,20 +38,39 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Dokument hochladen</h3>
+            <h3>Patientensuche</h3>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-5">
-            <form class="mt-3">
-                <input type="file" class="form-control-file mb-2" id="datei">
-                <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
-                <button type="button" class="btn btn-primary">Hochladen</button>
+            <form>
+                <input type="text" class="form-control mb-2" id="vorname" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="nachname" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="geburtsdatum" placeholder="Gebutsdatum">
+                <button type="button" class="btn btn-primary">Suchen</button>
             </form>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-10">
+            <table class="table table-hover mt-5">
+                <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Geburtsdatum</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Ole Kohl</td>
+                    <td>16.08.1997</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
