--- a/oshealthrec-website/Vorlagen/vorlage-login.html
+++ b/oshealthrec-website/Vorlagen/vorlage-login.html
@@ -23,41 +23,43 @@
 
   <body id="cas">
 
-<div id="login_page">
+   <div id="login_page">
 
- <div id="login_header" style="background: #007bff; color:#007bff; width:100%;height: 60px;">login_header</div> <!-- /login_header -->
+   <div id="login_header" style="background: #007bff; color:#007bff; width:100%;height: 60px;">
+    login_header
+   </div> <!-- /login_header -->
 
- <div  class="login_block">
-       <div class="ui-flex justify-center center" style=" width: 500px; height: 200px;">
+   <div  class="login_block">
+       <div class="ui-flex justify-center center" style=" width: 500px; height: 250px;">
           <div class="cell">
             <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo"> 
          </div>
         </div>
-</div> 
+   </div> <!-- /login_block -->
 
 
-<div class="login_block">
+   <div class="login_block">
 
     <div class="container">
 
       <form class="form-signin">
         <h2 class="form-signin-heading">Melden Sie sich an</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
+        <label for="inputEmail" class="sr-only">E-Mail</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
+        <!-- <label for="inputPassword" class="sr-only">Passwort</label> -->
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
+        <!--  <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
-        </div>
+        </div> -->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
       </form>
 
     </div> <!-- /container -->
-</div>
+   </div> <!-- /login_block -->
 
-</div>
+  </div><!-- /login_page -->
 
 
     <!-- Optional JavaScript -->
