--- a/oshealthrec-website/Vorlagen/vorlage-login.html
+++ b/oshealthrec-website/Vorlagen/vorlage-login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -25,23 +25,19 @@
 
    <div id="login_page">
 
-   <div id="login_header" style="background: #007bff; color:#007bff; width:100%;height: 60px;">
-    login_header
-   </div> <!-- /login_header -->
+   <div id="login_header" style="background: #007bff; color:#007bff; width:100%;height: 60px;">login_header</div> <!-- /login_header -->
 
    <div  class="login_block">
        <div class="ui-flex justify-center center" style=" width: 500px; height: 250px;">
           <div class="cell">
-            <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo"> 
-         </div>
+            <img class="img-responsive" src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo"> 
+          </div>
         </div>
    </div> <!-- /login_block -->
 
 
-   <div class="login_block">
-
+   <div class="login_block border-right border-bottom ">
     <div class="container">
-
       <form class="form-signin">
         <h2 class="form-signin-heading">Melden Sie sich an</h2>
         <label for="inputEmail" class="sr-only">E-Mail</label>
@@ -53,9 +49,8 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div> -->
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <button class="btn btn-primary btn-block" type="submit">Login</button>
       </form>
-
     </div> <!-- /container -->
    </div> <!-- /login_block -->
 
