--- a/oshealthrec-website/Vorlagen/vorlage-login.html
+++ b/oshealthrec-website/Vorlagen/vorlage-login.html
@@ -42,7 +42,7 @@
         <h2 class="form-signin-heading">Melden Sie sich an</h2>
         <label for="inputEmail" class="sr-only">E-Mail</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <!-- <label for="inputPassword" class="sr-only">Passwort</label> -->
+        <label for="inputPassword" class="sr-only">Passwort</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <!--  <div class="checkbox">
           <label>
