--- a/oshealthrec-website/Vorlagen/vorlage-login.html
+++ b/oshealthrec-website/Vorlagen/vorlage-login.html
@@ -49,7 +49,7 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div> -->
-        <button class="btn btn-primary btn-block" type="submit">Login</button>
+        <button class="btn btn-primary btn-block" type="submit" onclick="login()">Login</button>
       </form>
     </div> <!-- /container -->
    </div> <!-- /login_block -->
