index.html angepasst

--- a/oshealthrec-website/index.html
+++ b/oshealthrec-website/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="../css/signin.css">
+    <link rel="stylesheet" href="css/signin.css">
    
 
   </head>
@@ -30,7 +30,7 @@
    <div  class="login_block">
        <div class="ui-flex justify-center center" style=" width: 500px; height: 250px;">
           <div class="cell">
-            <img class="img-responsive" src="../images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo"> 
+            <img class="img-responsive" src="images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo">
           </div>
         </div>
    </div> <!-- /login_block -->
