--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -1,68 +1,59 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+</head>
+<body class="index">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 pb-5">
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/signin.css">
-   
-
-  </head>
-
-  <body id="cas">
-
-   <div id="login_page">
-
-   <div id="login_header" style="background: #007bff; color:#007bff; width:100%;height: 60px;">login_header</div> <!-- /login_header -->
-
-   <div  class="login_block">
-       <div class="ui-flex justify-center center" style=" width: 500px; height: 250px;">
-          <div class="cell">
+</nav>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="cell-sm-8">
             <img class="img-responsive" src="images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo">
-          </div>
         </div>
-   </div> <!-- /login_block -->
+    </div>
+    <div class="row justify-content-center">
+        <div class="cell-sm-6">
+            <button class="btn btn-secondary mt-3" type="submit" onclick="signIn()"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
+        </div>
+    </div>
 
 
-   <div class="login_block border-right border-bottom ">
-    <div class="container">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Melden Sie sich an</h2>
-        <label for="inputEmail" class="sr-only">E-Mail</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Passwort</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <!--  <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div> -->
-        <button class="btn btn-primary btn-block" type="submit" onclick="login()">Login</button>
-      </form>
-    </div> <!-- /container -->
-   </div> <!-- /login_block -->
+    <form>
+        <div>
+            <label>Select file to upload</label>
+            <input type="file" id="fileInput">
+        </div>
+        <button type="button" onclick="importCard()">Upload</button>
+    </form>
 
-  </div><!-- /login_page -->
+    <button type="button" id="checkWallet" onclick="checkWallet()">Check Wallet</button>
 
+</div>
 
-    <!-- Optional JavaScript -->
+<!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+<script src="/__/firebase/6.3.4/firebase-app.js"></script>
+<!-- Add Firebase products that you want to use -->
+<script src="/__/firebase/6.3.4/firebase-auth.js"></script>
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+
+
 <script src="app.js"></script>
-  </body>
+</body>
 </html>
