--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -46,12 +46,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-<script src="/__/firebase/6.3.4/firebase-app.js"></script>
-<!-- Add Firebase products that you want to use -->
-<script src="/__/firebase/6.3.4/firebase-auth.js"></script>
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+<!--&lt;!&ndash; Firebase App (the core Firebase SDK) is always required and must be listed first &ndash;&gt;-->
+<!--<script src="/__/firebase/6.3.4/firebase-app.js"></script>-->
+<!--&lt;!&ndash; Add Firebase products that you want to use &ndash;&gt;-->
+<!--<script src="/__/firebase/6.3.4/firebase-auth.js"></script>-->
+<!--&lt;!&ndash; Initialize Firebase &ndash;&gt;-->
+<!--<script src="/__/firebase/init.js"></script>-->
 
 
 <script src="app.js"></script>
