Nicht mehr benötigte Funktionen gelöscht.

--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -23,21 +23,9 @@
     </div>
     <div class="row justify-content-center">
         <div class="cell-sm-6">
-            <button class="btn btn-secondary mt-3" type="submit" onclick="signIn()"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
+            <button class="btn btn-secondary mt-3" type="submit" onclick="window.location.href='http://http://34.67.49.75:3000/auth/github'"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
         </div>
     </div>
-
-
-    <form>
-        <div>
-            <label>Select file to upload</label>
-            <input type="file" id="fileInput">
-        </div>
-        <button type="button" onclick="importCard()">Upload</button>
-    </form>
-
-    <button type="button" id="checkWallet" onclick="checkWallet()">Check Wallet</button>
-
 </div>
 
 <!-- Optional JavaScript -->
