Patienten Profil überarbeitet

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -43,22 +43,19 @@
         <div class="col-12">
             <dl class="row">
                 <dt class="col-sm-2">Vorname</dt>
-                <dd class="col-sm-10">Ole</dd>
+                <dd class="col-sm-10" id="vorname"></dd>
 
                 <dt class="col-sm-2">Nachname</dt>
-                <dd class="col-sm-10">Kohl</dd>
+                <dd class="col-sm-10" id="nachname"></dd>
 
                 <dt class="col-sm-2">Geschlecht</dt>
-                <dd class="col-sm-10">Männlich</dd>
+                <dd class="col-sm-10" id="geschlecht"></dd>
 
                 <dt class="col-sm-2">Geburtsdatum</dt>
-                <dd class="col-sm-10">16.08.1997</dd>
+                <dd class="col-sm-10" id="geburtsdatum"></dd>
 
                 <dt class="col-sm-2">Blutgruppe</dt>
-                <dd class="col-sm-10">A Rh pos</dd>
-
-                <dt class="col-sm-2">Notfallkontakt</dt>
-                <dd class="col-sm-10">Sebastian Kamp</dd>
+                <dd class="col-sm-10" id="blutgruppe"></dd>
             </dl>
         </div>
     </div>
