Mitarbeiter Profil überarbeitet

--- a/oshealthrec-website/public/mitarbeiter/profil.html
+++ b/oshealthrec-website/public/mitarbeiter/profil.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body>
+<body class="mitarbeiter-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
@@ -40,16 +40,16 @@
         <div class="col-12">
             <dl class="row">
                 <dt class="col-sm-2">Vorname</dt>
-                <dd class="col-sm-10">Sebastian</dd>
+                <dd class="col-sm-10" id="vorname"></dd>
 
                 <dt class="col-sm-2">Nachname</dt>
-                <dd class="col-sm-10">Kamp</dd>
+                <dd class="col-sm-10" id="nachname"></dd>
 
                 <dt class="col-sm-2">Geschlecht</dt>
-                <dd class="col-sm-10">Männlich</dd>
+                <dd class="col-sm-10" id="geschlecht"></dd>
 
                 <dt class="col-sm-2">Geburtsdatum</dt>
-                <dd class="col-sm-10">16.08.1997</dd>
+                <dd class="col-sm-10" id="geburtsdatum"></dd>
             </dl>
         </div>
     </div>
