--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body>
+<body class="doktor-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
@@ -43,23 +43,19 @@
         <div class="col-12">
             <dl class="row">
                 <dt class="col-sm-2">Vorname</dt>
-                <dd class="col-sm-10">Li-Ming</dd>
+                <dd class="col-sm-10" id="vorname"></dd>
 
                 <dt class="col-sm-2">Nachname</dt>
-                <dd class="col-sm-10">Yu</dd>
+                <dd class="col-sm-10" id="nachname"></dd>
 
                 <dt class="col-sm-2">Geschlecht</dt>
-                <dd class="col-sm-10">Weiblich</dd>
+                <dd class="col-sm-10" id="geschlecht"></dd>
 
                 <dt class="col-sm-2">Geburtsdatum</dt>
-                <dd class="col-sm-10">01.01.1982</dd>
+                <dd class="col-sm-10" id="geburtsdatum"></dd>
 
                 <dt class="col-sm-2">Anschrift</dt>
-                <dd class="col-sm-10">
-                    Musterstraße 42 <br />
-                    49074 Osnabrück <br />
-                    Deutschland <br />
-                </dd>
+                <dd class="col-sm-10" id="anschrift"></dd>
             </dl>
         </div>
     </div>
