Weiterleitung zur Arzt-suche

--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -70,7 +70,7 @@
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary mt-2 btn-block freigaben-button">Berechtigung <br />entziehen</button> <br />
-                <button type="button" class="btn btn-primary btn-block freigaben-button" onclick="window.location.href='/arzt-suche.html'">Arzt suchen</button>
+                <button type="button" class="btn btn-primary btn-block freigaben-button" onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen</button>
             </form>
         </div>
     </div>
