--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputVorname" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterDoctorTableByGivenname()" placeholder="Vorname">
                 <input type="text" class="form-control mb-2" id="inputNachname" placeholder="Nachname">
                 <input type="text" class="form-control mb-2" id="inputStraße" placeholder="Straße">
                 <input type="text" class="form-control mb-2" id="inputOrt" placeholder="Ort">
