Filter für Ärzte Tabelle

--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -48,9 +48,9 @@
         <div class="col-sm-5">
             <form>
                 <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterDoctorTableByGivenname()" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="inputNachname" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="inputStraße" placeholder="Straße">
-                <input type="text" class="form-control mb-2" id="inputOrt" placeholder="Ort">
+                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterDoctorTableBySurname()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputStraße" onkeyup="filterDoctorTableByStreet()" placeholder="Straße">
+                <input type="text" class="form-control mb-2" id="inputOrt" onkeyup="filterDoctorTableByCity()" placeholder="Ort">
             </form>
         </div>
     </div>
