Auflistung freigegebener Ärzte

--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body id="patient-freigaben">
+<body class="patient-freigaben">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
