Auflistung freigegebener Ärzte

--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -54,16 +54,8 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>Dr. Li-Ming Yu</td>
-                    <td>
-                        Musterstraße 42 <br />
-                        49074 Osnabrück <br />
-                        Deutschland <br />
-                    </td>
-                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
-                </tr>
+                <tbody id="arztTabelle">
+
                 </tbody>
             </table>
         </div>
