Auflistung der Mitarbeiter des Arztes

--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body>
+<body class="doktor-mitarbeiter">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
@@ -54,7 +54,7 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="mitarbeiterTabelle">
                 <tr>
                     <td>Sebastian Kamp</td>
                     <td>01.01.1982</td>
