--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body>
+<body class="doktor-patienten">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
@@ -63,7 +63,7 @@
                     <th scope="col">Geburtsdatum</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="patientenTabelle">
                 <tr>
                     <td>Ole Kohl</td>
                     <td>16.08.1997</td>
