--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -47,9 +47,9 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="vorname" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="nachname" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="geburtsdatum" placeholder="Geburtsdatum">
+                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterPatientTable()" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterPatientTable()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()" placeholder="Geburtsdatum">
             </form>
         </div>
     </div>
