--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -49,7 +49,7 @@
             <form>
                 <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterPatientTable()" placeholder="Vorname">
                 <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterPatientTable()" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()" placeholder="Geburtsdatum">
+                <input type="date" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()" placeholder="Geburtsdatum">
             </form>
         </div>
     </div>
