--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -61,7 +61,7 @@
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary mt-2 btn-block freigaben-button">Berechtigung <br />entziehen</button> <br />
-                <button type="button" class="btn btn-primary btn-block freigaben-button">Mitarbeiter suchen</button>
+                <button type="button" class="btn btn-primary btn-block freigaben-button" onclick="window.location.href='/doktor/mitarbeiter-suche.html'">Mitarbeiter suchen</button>
             </form>
         </div>
     </div>
