Auflistung aller Ärzte, denen der Mitarbeiter zugeteilt ist.

--- a/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
+++ b/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
@@ -11,7 +11,7 @@
 
     <title>OSHealthRec</title>
 </head>
-<body>
+<body class="mitarbeiter-dokumentenverwaltung">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
@@ -50,15 +50,8 @@
                     <th scope="col">Anschrift</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>Dr. Li-Ming Yu</td>
-                    <td>
-                        Musterstraße 42 <br />
-                        49074 Osnabrück <br />
-                        Deutschland <br />
-                    </td>
-                </tr>
+                <tbody id="doktorTabelle">
+
                 </tbody>
             </table>
         </div>
