Filtern der Patienten Tabelle

--- a/oshealthrec-website/public/mitarbeiter/patienten-suche.html
+++ b/oshealthrec-website/public/mitarbeiter/patienten-suche.html
@@ -44,9 +44,9 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="vorname" onkeyup="filterPatientTable()" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="nachname" onkeyup="filterPatientTable()" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="geburtsdatum" onkeyup="filterPatientTable()" placeholder="Gebutsdatum">
+                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterPatientTable()" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterPatientTable()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()" placeholder="Gebutsdatum">
             </form>
         </div>
     </div>
