Weiterleitung durch Hochladen-Button hinzugefügt

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -88,7 +88,7 @@
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary mt-3 btn-block freigaben-button">Herunterladen</button> <br />
-                <button type="button" class="btn btn-primary btn-block freigaben-button">Hochladen</button>
+                <button type="button" class="btn btn-primary btn-block freigaben-button" onclick="window.location.href='/doktor/hochladen.html'">Hochladen</button>
             </form>
         </div>
     </div>
