--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -85,7 +85,7 @@
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary mt-3 btn-block freigaben-button">Herunterladen</button> <br />
-                <button type="button" class="btn btn-primary btn-block freigaben-button">Hochladen</button>
+                <button type="button" class="btn btn-primary btn-block freigaben-button" onclick="window.location.href='/mitarbeiter/hochladen.html'">Hochladen</button>
             </form>
         </div>
     </div>
