Logout Button mit Logout-Funktion verknüpft

--- a/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
+++ b/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5">
+        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
             Log out
         </button>
     </div>
