--- a/oshealthrec-website/public/doktor/hochladen.html
+++ b/oshealthrec-website/public/doktor/hochladen.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="patienten.html">Patienten</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5">
+        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
             Log out
         </button>
     </div>
