Anzeige des Notfallkontakts hinzugefügt

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -56,6 +56,9 @@
 
                 <dt class="col-sm-2">Blutgruppe</dt>
                 <dd class="col-sm-10" id="blutgruppe"></dd>
+
+                <dt class="col-sm-2">Notfallkontakt</dt>
+                <dd class="col-sm-10" id="notfallkontakt"></dd>
             </dl>
         </div>
     </div>
