Arzt-Tabellen angepasst

--- a/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
+++ b/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
@@ -48,6 +48,7 @@
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Anschrift</th>
+                    <th scope="col">Arztbereich</th>
                 </tr>
                 </thead>
                 <tbody id="doktorTabelle">
