--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -61,7 +61,7 @@
                     <tr>
                         <th scope="col">Name</th>
                         <th scope="col">Anschrift</th>
-                        <th scope="col"></th>
+                        <th scope="col">Arztbezeichnung</th>
                     </tr>
                 </thead>
                 <tbody id="arztTabelle">
