--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -51,6 +51,7 @@
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Anschrift</th>
+                    <th scope="col">Arztbezeichnung</th>
                     <th></th>
                 </tr>
                 </thead>
