Auflistung der Reports des ausgewählten Patienten beim Doktor

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -71,18 +71,13 @@
                     <th scope="col">Titel</th>
                     <th scope="col">Beschreibung</th>
                     <th scope="col">Datum</th>
+                    <th scope="col">Arzt</th>
                     <th scope="col">Hochgeladen von</th>
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Blutanalyse</td>
-                    <td>voll die krasse Blutanalyse</td>
-                    <td>25.07.2019</td>
-                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
-                </tr>
+                <tbody id="reportTabelle">
+
                 </tbody>
             </table>
         </div>
