Auflistung der Reports eines Patienten beim Mitarbeiter angepasst

--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -72,14 +72,8 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Blutanalyse</td>
-                    <td>voll die krasse Blutanalyse</td>
-                    <td>25.07.2019</td>
-                    <td><input type="checkbox" class="form-check-input bigger-checkbox"></td>
-                </tr>
+                <tbody id="reportTabelle">
+
                 </tbody>
             </table>
         </div>
