Filtern der Report Tabelle des Patienten angepasst

--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -40,12 +40,12 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
-            <form class="form-group form-inline">
-                <input type="text" class="form-control mr-3" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel" style="width: 400px">
-                <input type="text" class="form-control mr-3" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung" style="width: 400px">
-                <input type="text" class="form-control mr-3" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum" style="width: 400px">
-                <input type="text" class="form-control mr-3" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von" style="width: 400px">
+        <div class="col-sm-5">
+            <form>
+                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
+                <input type="text" class="form-control mr-2" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
+                <input type="text" class="form-control mr-2" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
+                <input type="text" class="form-control mr-2" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
             </form>
         </div>
     </div>
