Filtern der Tabellen angepasst

--- a/oshealthrec-website/public/doktor/mitarbeiter-suche.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter-suche.html
@@ -47,8 +47,7 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterEmployeeTable()" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterEmployeeTable()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterEmployeeTable()" placeholder="Name">
                 <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterEmployeeTable()" placeholder="Gebutsdatum">
             </form>
         </div>
