--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -60,6 +60,16 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-sm-5">
+            <form>
+                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
+                <input type="text" class="form-control mr-2" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
+                <input type="text" class="form-control mr-2" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
+                <input type="text" class="form-control mr-2" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
+            </form>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-9">
             <table class="table table-hover mt-3">
                 <thead>
