--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -47,8 +47,7 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterPatientTable()" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterPatientTable()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterPatientTable()" placeholder="Name">
                 <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()" placeholder="Geburtsdatum">
             </form>
         </div>
