--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -47,10 +47,8 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterDoctorTable()" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterDoctorTable()" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="inputStraße" onkeyup="filterDoctorTable()" placeholder="Straße">
-                <input type="text" class="form-control mb-2" id="inputOrt" onkeyup="filterDoctorTable()" placeholder="Ort">
+                <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterDoctorTable()" placeholder="Name">
+                <input type="text" class="form-control mb-2" id="inputAdresse" onkeyup="filterDoctorTable()" placeholder="Adresse">
             </form>
         </div>
     </div>
