--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -39,10 +39,10 @@
     <div class="row">
         <div class="col-sm-4">
             <form>
-                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
-                <input type="text" class="form-control mb-2" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
-                <input type="text" class="form-control mb-2" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
+                <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
+                <input type="text" class="form-control mb-2 mr-5" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
+                <input type="text" class="form-control mb-2 mr-5" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
+                <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
             </form>
         </div>
         <div class="col-6">
